messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
      version: green
  template:
    metadata:
      labels:
        app: messaging-app
        version: green
    spec:
      containers:
        - name: messaging-app
          image: your-docker-image:green # Replace with the actual image for the green version
          ports:
            - containerPort: 8000
